envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                stream_idle_timeout: 0s
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: my_backend_cluster
                            timeout: 0s
                            hash_policy:
                              - header:
                                  header_name: x-hash-token
                                terminal: true
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: auth_hash_plugin
                        root_id: auth_hash_plugin
                        vm_config:
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                            local:
                              filename: "/etc/envoy/proxy-wasm-plugins/fd_istio_plugin.wasm"
                        configuration:
                          "@type": type.googleapis.com/google.protobuf.StringValue
                          value: "{}"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: my_backend_cluster
      type: STRICT_DNS
      connect_timeout: 0.25s
      lb_policy: RING_HASH
      load_assignment:
        cluster_name: my_backend_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 6000
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 6001
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 6002
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 6003

admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
